--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,12 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/textViewValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="Waiting for data..."
+        android:layout_centerInParent="true"
+        android:textSize="18sp" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
