--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,11 +8,29 @@
 
     <TextView
         android:id="@+id/textViewValue"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Waiting for data..."
+        android:layout_width="158dp"
+        android:layout_height="0dp"
         android:layout_centerInParent="true"
-        android:textSize="18sp" />
+        android:layout_marginTop="136dp"
+        android:layout_marginBottom="54dp"
+        android:text="Waiting for data..."
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/semicircleGaugeView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.pressure_sensor.SemicircleGaugeView
+        android:id="@+id/semicircleGaugeView"
+        android:layout_width="379dp"
+        android:layout_height="181dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="241dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewValue" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
