--- a/app/src/main/res/layout/doctor_view.xml
+++ b/app/src/main/res/layout/doctor_view.xml
@@ -90,7 +90,7 @@
         android:id="@+id/resetButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="196dp"
+        android:layout_marginTop="40dp"
         android:text="Reset"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -99,5 +99,59 @@
         style="@style/CustomPainButton"
         android:fontFamily="@font/red_hat_regular"
         android:textColor="@color/white"/>
+
+    <TextView
+        android:id="@+id/mitigatorTextView"
+        android:layout_width="279dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="200dp"
+        android:fontFamily="@font/red_hat_regular"
+        android:text="Curve Mitigator Size Selection"
+        android:textColor="@color/text_black"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@id/resetButton"
+        tools:layout_editor_absoluteX="49dp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_marginTop="40dp"
+        android:spacing="16dp"
+        app:layout_constraintTop_toBottomOf="@id/mitigatorTextView"
+        >
+
+        <Button
+            android:id="@+id/smallMitBtn"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="50dp"
+            android:text="Small"
+            style="@style/CustomPainButton"
+            android:fontFamily="@font/red_hat_regular"
+            android:textColor="@color/white"/>
+
+        <Button
+            android:id="@+id/mediumMitBtn"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="50dp"
+            android:text="Medium"
+            style="@style/CustomPainButton"
+            android:fontFamily="@font/red_hat_regular"
+            android:textColor="@color/white"/>
+
+        <Button
+            android:id="@+id/largeMitBtn"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="50dp"
+            android:text="Large"
+            style="@style/CustomPainButton"
+            android:fontFamily="@font/red_hat_regular"
+            android:textColor="@color/white"/>
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
