--- a/app/src/main/res/layout/doctor_view.xml
+++ b/app/src/main/res/layout/doctor_view.xml
@@ -45,6 +45,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="24dp">
 
+        <TextView
+            android:id="@+id/currentPressureLabelDoc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Current Pressure:"
+            android:textSize="20sp"
+            android:fontFamily="@font/red_hat_regular"
+            android:textColor="@color/text_black"/>
+
         <!-- Max Pressure -->
         <TextView
             android:id="@+id/maxPressureTextView"
@@ -102,8 +111,8 @@
 
     <TextView
         android:id="@+id/mitigatorTextView"
-        android:layout_width="279dp"
-        android:layout_height="25dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="200dp"
         android:fontFamily="@font/red_hat_regular"
         android:text="Curve Mitigator Size Selection"
@@ -111,7 +120,21 @@
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/resetButton"
-        tools:layout_editor_absoluteX="49dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <TextView
+        android:id="@+id/currentMitigatorTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Current Selection: Medium"
+        android:textSize="16sp"
+        android:fontFamily="@font/red_hat_regular"
+        android:textColor="@color/text_black"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@id/mitigatorTextView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <LinearLayout
         android:layout_width="match_parent"
